# leet-info-graph-gpt-5.1-codex-mini

./: README.md  backend.txt  goals.md  stderr.txt
.leet/: .todos.done.json  .todos.json
backend/: pyproject.toml
backend/data/duckdb/: duckdb_core.db
backend/src/infograph/: __init__.py
backend/src/infograph/core/schemas/: __init__.py  infographic.py  message.py  research_session.py  source.py  user.py
backend/src/infograph/services/: __init__.py  auth_service.py  infographic_service.py  search_service.py
backend/src/infograph/stores/: __init__.py  abstract_infographic_store.py  abstract_message_store.py  abstract_session_store.py  abstract_source_store.py  abstract_user_store.py
backend/src/infograph/stores/duckdb/: base.py  infographic_store_duckdb.py  message_store_duckdb.py  session_store_duckdb.py  source_store_duckdb.py  user_store_duckdb.py  utils.py
backend/src/infograph/svc/: __init__.py  api_router_base.py  api_service.py  main.py
backend/src/infograph/svc/api/: __init__.py
backend/src/infograph/svc/api/v1/: __init__.py  api.py
backend/src/infograph/svc/api/v1/routers/: __init__.py  auth_router.py  health_router.py  session_router.py  source_router.py
backend/tests/: conftest.py  test_auth_router.py  test_health_router.py  test_session_router.py  test_source_router.py
backend/tests/test_stores/: test_infographic_store.py  test_message_store.py  test_session_store.py  test_source_store.py  test_user_store.py
data/duckdb/: duckdb_core.db
frontend/: .pnp.cjs  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: health.js  (+2 more)
(+12 files in other folders)
