[project]
name = "infograph-backend"
version = "0.1.0"
description = "Research Infograph Assistant backend"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
click = "^8.1.7"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"
