[project]
name = "infograph-backend"
version = "0.1.0"
description = "Research Infograph Assistant backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "click>=8.1.7",
    "duckdb>=0.8.1",
    "pyjwt>=2.8.0",
    "google-auth>=2.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"
